welcome.lessons.welcome.array.array123.Array123.scala.error
array123:6: error: type mismatch;
 found   : Unit
 required: Boolean
		if (nums(i)=1) {
                           ^array123:8: error: type mismatch;
 found   : Unit
 required: Boolean
		} else if (nums(i)=2) {
                                  ^array123:10: error: type mismatch;
 found   : Unit
 required: Boolean
		} else if (nums(i)=3) {
                                  ^