welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
	var un= false
	var deux= false
	var trois= false
	for (i<-0 to nums.length-1) {
		if (nums(i)=1) {
			un=true
		} else if (nums(i)=2) {
			deux=true
		} else if (nums(i)=3) {
			trois=true
		}
	}
	if (un && deux && trois) {
		return true
	} else {
		return false
	}
}
